src/test/testcases/errors/p2_public/task_6/call_err_3.ctx.mavl
function void main(){
    var int x;
    var int y;
    var bool z;
    
    foo(x, y, z);
}

function void foo(int x, float y, bool z){

}
